--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-import React, { useState } from "react";
+ import React, { useState } from "react";
 import { Calendar } from "@mantine/dates";
 import { Card, CardContent } from "@/components/ui/card";
 import { Button } from "@/components/ui/button";
@@ -27,7 +27,7 @@ export default function AICalendar() {
     const prompt = `Suggest some events for ${selectedDate.toDateString()}`;
     
     try {
-      const response = await fetch("http://localhost:5001/api/get-ai-suggestion", {
+      const response = await fetch("https://your-backend-url.com/api/get-ai-suggestion", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ prompt }),
@@ -42,40 +42,42 @@ export default function AICalendar() {
 
   return (
     <motion.div
-      className="flex flex-col items-center p-4 bg-gray-100 min-h-screen"
+      className="flex flex-col items-center p-6 bg-gray-100 min-h-screen"
       initial={{ opacity: 0 }}
       animate={{ opacity: 1 }}
     >
-      <Card className="w-full max-w-md p-4 bg-white rounded-2xl shadow-xl">
+      <Card className="w-full max-w-md p-6 bg-white rounded-2xl shadow-lg border border-gray-200">
         <CardContent>
-          <h1 className="text-xl font-bold text-center">AI-Powered Calendar</h1>
-          <Calendar value={selectedDate} onChange={setSelectedDate} className="my-4" />
-          <div className="flex gap-2">
+          <h1 className="text-2xl font-bold text-center text-blue-600">AI-Powered Calendar</h1>
+          <Calendar value={selectedDate} onChange={setSelectedDate} className="my-4 border rounded-lg shadow-sm" />
+          <div className="flex gap-2 mt-2">
             <Input
               value={event}
               onChange={(e) => setEvent(e.target.value)}
               placeholder="Add an event"
-              className="flex-1"
+              className="flex-1 border border-gray-300 p-2 rounded-lg"
             />
-            <Button onClick={handleAddEvent} className="bg-blue-500 text-white">
+            <Button onClick={handleAddEvent} className="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg">
               Add
             </Button>
           </div>
           {selectedDate && events[selectedDate.toDateString()] && (
-            <div className="mt-4">
-              <h2 className="font-semibold">Events for {selectedDate.toDateString()}:</h2>
-              <ul className="list-disc pl-5">
+            <div className="mt-4 p-3 bg-gray-50 border rounded-lg">
+              <h2 className="font-semibold text-lg">Events for {selectedDate.toDateString()}:</h2>
+              <ul className="list-disc pl-5 text-gray-700">
                 {events[selectedDate.toDateString()].map((ev, index) => (
                   <li key={index}>{ev}</li>
                 ))}
               </ul>
             </div>
           )}
-          <Button onClick={handleAISuggestion} className="bg-green-500 text-white mt-4">
+          <Button onClick={handleAISuggestion} className="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg mt-4">
             Get AI Suggestions
           </Button>
           {aiSuggestion && (
-            <p className="mt-2 text-gray-700">AI Suggestion: {aiSuggestion}</p>
+            <p className="mt-2 text-gray-800 font-medium bg-gray-100 p-2 rounded-lg">
+              AI Suggestion: {aiSuggestion}
+            </p>
           )}
         </CardContent>
       </Card>
