--- a/index.html
+++ b/index.html
@@ -1,72 +1,87 @@
-import React, { useState } from "react";
-import { Calendar } from "@mantine/dates";
-import { Card, CardContent } from "@/components/ui/card";
-import { Button } from "@/components/ui/button";
-import { Input } from "@/components/ui/input";
-import CryptoJS from "crypto-js";
-
-// Encrypted API Key (Replace with your encrypted key if needed)
-const encryptedApiKey = "U2FsdGVkX1+QdF7vK6RbQ1Y0HQ0pEjR5gB2mZI/2X6o="; // Example
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI-Powered Calendar</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>AI-Powered Calendar</h1>
+        <input type="date" id="datePicker">
+        <input type="text" id="eventInput" placeholder="Add an event">
+        <button onclick="addEvent()">Add Event</button>
+        <button onclick="getAiSuggestion()">Get AI Suggestions</button>
+        <div id="eventList"></div>
+        <p id="aiSuggestion"></p>
+    </div>
+    <script src="crypto.js"></script> <!-- Include CryptoJS Library -->
+    <script src="script.js"></script>
+</body>
+</html>
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f4f4f4;
+}
+.container {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+input, button {
+    margin: 10px;
+    padding: 8px;
+    width: 80%;
+    border-radius: 5px;
+}
+button {
+    background: blue;
+    color: white;
+    cursor: pointer;
+}
+const encryptedApiKey = "U2FsdGVkX1+QdF7vK6RbQ1Y0HQ0pEjR5gB2mZI/2X6o=";
 const secretPassphrase = "super_secret_pass";
 
-const getDecryptedApiKey = () => {
-  const bytes = CryptoJS.AES.decrypt(encryptedApiKey, secretPassphrase);
-  return bytes.toString(CryptoJS.enc.Utf8);
-};
+function decryptApiKey() {
+    let bytes = CryptoJS.AES.decrypt(encryptedApiKey, secretPassphrase);
+    return bytes.toString(CryptoJS.enc.Utf8);
+}
 
-export default function AICalendar() {
-  const [selectedDate, setSelectedDate] = useState(null);
-  const [event, setEvent] = useState("");
-  const [events, setEvents] = useState({});
-  const [aiSuggestion, setAiSuggestion] = useState("");
-
-  const handleAddEvent = () => {
-    if (!event || !selectedDate) return;
-    const dateKey = selectedDate.toDateString();
-    setEvents((prev) => ({ ...prev, [dateKey]: [...(prev[dateKey] || []), event] }));
-    setEvent("");
-  };
-
-  const handleAISuggestion = async () => {
-    if (!selectedDate) return;
-    const prompt = `Suggest some events for ${selectedDate.toDateString()}`;
-    const apiKey = getDecryptedApiKey();
-    try {
-      const response = await fetch(
-        "https://generativelanguage.googleapis.com/v1beta2/models/text-bison-001:generateText",
-        {
-          method: "POST",
-          headers: { "Content-Type": "application/json", Authorization: `Bearer ${apiKey}` },
-          body: JSON.stringify({ prompt }),
-        }
-      );
-      const data = await response.json();
-      setAiSuggestion(data.text || "No suggestions available");
-    } catch (error) {
-      console.error("Error fetching AI suggestion:", error);
+function addEvent() {
+    const date = document.getElementById("datePicker").value;
+    const eventText = document.getElementById("eventInput").value;
+    if (date && eventText) {
+        document.getElementById("eventList").innerHTML += `<p><b>${date}:</b> ${eventText}</p>`;
+        document.getElementById("eventInput").value = "";
     }
-  };
+}
 
-  return (
-    <div>
-      <h1>AI-Powered Calendar</h1>
-      <Calendar value={selectedDate} onChange={setSelectedDate} />
-      <div>
-        <Input value={event} onChange={(e) => setEvent(e.target.value)} placeholder="Add an event" />
-        <Button onClick={handleAddEvent}>Add</Button>
-      </div>
-      {selectedDate && events[selectedDate.toDateString()] && (
-        <div>
-          <h2>Events for {selectedDate.toDateString()}:</h2>
-          <ul>
-            {events[selectedDate.toDateString()].map((ev, index) => (
-              <li key={index}>{ev}</li>
-            ))}
-          </ul>
-        </div>
-      )}
-      <Button onClick={handleAISuggestion}>Get AI Suggestions</Button>
-      {aiSuggestion && <p>AI Suggestion: {aiSuggestion}</p>}
-    </div>
-  );
+async function getAiSuggestion() {
+    const date = document.getElementById("datePicker").value;
+    if (!date) return alert("Select a date first!");
+
+    const apiKey = decryptApiKey();
+    const prompt = `Suggest some events for ${date}`;
+
+    try {
+        const response = await fetch(
+            "https://generativelanguage.googleapis.com/v1beta2/models/text-bison-001:generateText",
+            {
+                method: "POST",
+                headers: { "Content-Type": "application/json", Authorization: `Bearer ${apiKey}` },
+                body: JSON.stringify({ prompt }),
+            }
+        );
+        const data = await response.json();
+        document.getElementById("aiSuggestion").innerText = `AI Suggestion: ${data.text || "No suggestions available"}`;
+    } catch (error) {
+        console.error("AI Error:", error);
+    }
 }
