--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Powered Calendar</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        input, button {
+            margin: 10px;
+            padding: 8px;
+            width: 80%;
+            border-radius: 5px;
+        }
+        button {
+            background: blue;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -16,72 +44,46 @@
         <div id="eventList"></div>
         <p id="aiSuggestion"></p>
     </div>
-    <script src="crypto.js"></script> <!-- Include CryptoJS Library -->
-    <script src="script.js"></script>
+    <script>
+        const encryptedApiKey = "U2FsdGVkX1+QdF7vK6RbQ1Y0HQ0pEjR5gB2mZI/2X6o";
+        const secretPassphrase = "super_secret_pass";
+
+        function decryptApiKey() {
+            let bytes = CryptoJS.AES.decrypt(encryptedApiKey, secretPassphrase);
+            return bytes.toString(CryptoJS.enc.Utf8);
+        }
+
+        function addEvent() {
+            const date = document.getElementById("datePicker").value;
+            const eventText = document.getElementById("eventInput").value;
+            if (date && eventText) {
+                document.getElementById("eventList").innerHTML += `<p><b>${date}:</b> ${eventText}</p>`;
+                document.getElementById("eventInput").value = "";
+            }
+        }
+
+        async function getAiSuggestion() {
+            const date = document.getElementById("datePicker").value;
+            if (!date) return alert("Select a date first!");
+
+            const apiKey = decryptApiKey();
+            const prompt = `Suggest some events for ${date}`;
+
+            try {
+                const response = await fetch(
+                    "https://generativelanguage.googleapis.com/v1beta2/models/text-bison-001:generateText",
+                    {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json", Authorization: `Bearer ${apiKey}` },
+                        body: JSON.stringify({ prompt }),
+                    }
+                );
+                const data = await response.json();
+                document.getElementById("aiSuggestion").innerText = `AI Suggestion: ${data.text || "No suggestions available"}`;
+            } catch (error) {
+                console.error("AI Error:", error);
+            }
+        }
+    </script>
 </body>
 </html>
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f4f4f4;
-}
-.container {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-input, button {
-    margin: 10px;
-    padding: 8px;
-    width: 80%;
-    border-radius: 5px;
-}
-button {
-    background: blue;
-    color: white;
-    cursor: pointer;
-}
-const encryptedApiKey = "U2FsdGVkX1+QdF7vK6RbQ1Y0HQ0pEjR5gB2mZI/2X6o=";
-const secretPassphrase = "super_secret_pass";
-
-function decryptApiKey() {
-    let bytes = CryptoJS.AES.decrypt(encryptedApiKey, secretPassphrase);
-    return bytes.toString(CryptoJS.enc.Utf8);
-}
-
-function addEvent() {
-    const date = document.getElementById("datePicker").value;
-    const eventText = document.getElementById("eventInput").value;
-    if (date && eventText) {
-        document.getElementById("eventList").innerHTML += `<p><b>${date}:</b> ${eventText}</p>`;
-        document.getElementById("eventInput").value = "";
-    }
-}
-
-async function getAiSuggestion() {
-    const date = document.getElementById("datePicker").value;
-    if (!date) return alert("Select a date first!");
-
-    const apiKey = decryptApiKey();
-    const prompt = `Suggest some events for ${date}`;
-
-    try {
-        const response = await fetch(
-            "https://generativelanguage.googleapis.com/v1beta2/models/text-bison-001:generateText",
-            {
-                method: "POST",
-                headers: { "Content-Type": "application/json", Authorization: `Bearer ${apiKey}` },
-                body: JSON.stringify({ prompt }),
-            }
-        );
-        const data = await response.json();
-        document.getElementById("aiSuggestion").innerText = `AI Suggestion: ${data.text || "No suggestions available"}`;
-    } catch (error) {
-        console.error("AI Error:", error);
-    }
-}
