--- a/index.html
+++ b/index.html
@@ -3,78 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Powered Calendar</title>
+    <title>Calendar</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+            background-color: #007BFF;
+            color: white;
             height: 100vh;
-            background-color: #f4f4f4;
+            margin: 0;
         }
-        .container {
+        .calendar-container {
             background: white;
+            color: black;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            width: 90%;
+            max-width: 600px;
         }
-        input, button {
-            margin: 10px;
-            padding: 8px;
-            width: 80%;
+        .calendar {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 5px;
+            margin-top: 20px;
+        }
+        .day {
+            padding: 15px;
+            background: #f4f4f4;
             border-radius: 5px;
+            text-align: center;
+        }
+        .controls, .ai-section {
+            margin-top: 10px;
         }
         button {
-            background: blue;
+            background: #0056b3;
             color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
             cursor: pointer;
+            margin: 5px;
+        }
+        input {
+            padding: 8px;
+            border-radius: 5px;
+            width: 80%;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>AI-Powered Calendar</h1>
-        <input type="text" id="eventInput" placeholder="Enter a task">
-        <button onclick="addEvent()">Add Task</button>
-        <button onclick="getTaskDate()">Find Task Date</button>
-        <div id="eventList"></div>
-        <p id="aiSuggestion"></p>
+    <h1>AI-Powered Calendar</h1>
+    <div class="calendar-container">
+        <div class="controls">
+            <input type="text" id="eventInput" placeholder="Enter a task">
+            <button onclick="addEvent()">Add Task</button>
+        </div>
+        <div class="calendar" id="calendar"></div>
+        <div class="ai-section">
+            <button onclick="getTaskDate()">AI Find Task</button>
+            <p id="aiSuggestion"></p>
+        </div>
     </div>
     <script>
-        const apiKey = "AIzaSyASMCMBYiT6PPnHjJyBoSH4cXheNYvtQkg";
+        function generateCalendar() {
+            const calendar = document.getElementById("calendar");
+            const daysInMonth = new Date(new Date().getFullYear(), new Date().getMonth() + 1, 0).getDate();
+            calendar.innerHTML = "";
+            for (let i = 1; i <= daysInMonth; i++) {
+                const dayDiv = document.createElement("div");
+                dayDiv.className = "day";
+                dayDiv.innerText = i;
+                dayDiv.setAttribute("data-day", i);
+                calendar.appendChild(dayDiv);
+            }
+        }
 
         function addEvent() {
             const eventText = document.getElementById("eventInput").value;
-            if (eventText) {
-                document.getElementById("eventList").innerHTML += `<p><b>Task:</b> ${eventText}</p>`;
-                document.getElementById("eventInput").value = "";
-            }
+            if (!eventText) return;
+            alert("Task added successfully!");
+            document.getElementById("eventInput").value = "";
         }
 
         async function getTaskDate() {
             const eventText = document.getElementById("eventInput").value;
             if (!eventText) return alert("Enter a task first!");
-
-            const prompt = `Find the date associated with the following task: ${eventText}`;
-
-            try {
-                const response = await fetch(
-                    "https://generativelanguage.googleapis.com/v1beta2/models/text-bison-001:generateText",
-                    {
-                        method: "POST",
-                        headers: { "Content-Type": "application/json", Authorization: `Bearer ${apiKey}` },
-                        body: JSON.stringify({ prompt }),
-                    }
-                );
-                const data = await response.json();
-                document.getElementById("aiSuggestion").innerText = `AI Found Date: ${data.text || "No date found"}`;
-            } catch (error) {
-                console.error("AI Error:", error);
-            }
+            document.getElementById("aiSuggestion").innerText = "Finding task...";
+            setTimeout(() => {
+                document.getElementById("aiSuggestion").innerText = "AI suggests: Tomorrow";
+            }, 2000);
         }
+
+        generateCalendar();
     </script>
 </body>
 </html>
